--- a/home/trickTutorials/css/allTricks.css
+++ b/home/trickTutorials/css/allTricks.css
@@ -7,6 +7,20 @@ html, body{
   color: #222;
 }
 
+#trickContainer{
+float : right;
+padding-right: 10%;
+}
+
+#linkContainer{
+  float: left;
+  padding-left: 10%
+}
+
+.trickWrapper{
+margin:auto;
+}
+
 @media (max-width: 992px) {
   .social a {
     font-size: 4em;
