--- a/home/global/fragments/navbar.html
+++ b/home/global/fragments/navbar.html
@@ -1,30 +1,36 @@
-	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#"><img id="limepic" src="../../global/img/Logo_Website.png"></a>
 
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="#">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">First Steps</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Trick Tutorials</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Penmodding</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Inspiration</a>
-					</li>
-					
 
-				</ul>
-			</div>
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+	<div class="container-fluid">
+		<!-- <a class="navbar-brand" href="#"><img id="limepic" src="home/global/img/Logo_Website.png"></a> -->
+		<a class="navbar-brand" href="#"></a>
+
+		
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="../../../index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../../firstSteps/html/firstSteps.html">First Steps</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../../trickTutorials/html/AllTricks.html">Trick Tutorials</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../../penModding/html/penmodding.html">Penmodding</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Inspiration</a>
+				</li>
+				
+
+			</ul>
 		</div>
-	</nav>
+	</div>
+</nav>
