Update tutorials, first steps etc.

--- a/home/global/fragments/navbar.html
+++ b/home/global/fragments/navbar.html
@@ -2,7 +2,7 @@
 
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
 	<div class="container-fluid">
 		<!-- <a class="navbar-brand" href="#"><img id="limepic" src="home/global/img/Logo_Website.png"></a> -->
 		<a class="navbar-brand" href="#"></a>
@@ -33,4 +33,8 @@
 			</ul>
 		</div>
 	</div>
+	
 </nav>
+
+
+
