--- a/home/trickTutorials/css/allTricks.css
+++ b/home/trickTutorials/css/allTricks.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
-html, body{
-  height: 100%;
-  width: 100%;
-  font-family: 'Poppins', sans-serif;
-  color: #222;
-}
+
 
 #trickContainer{
 float : right;
@@ -19,6 +14,11 @@ padding-right: 10%;
 
 .trickWrapper{
 margin:auto;
+}
+
+.list-group-item{
+ 
+  text-align: left;
 }
 
 @media (max-width: 992px) {
