--- a/home/firstSteps/css/timeline.css
+++ b/home/firstSteps/css/timeline.css
@@ -1,5 +1,5 @@
-
-.timeline .timeline-item::after, .timeline .timeline-item::before {
+.timeline .timeline-item::after,
+.timeline .timeline-item::before {
   clear: both;
   content: '';
   display: block;
@@ -15,7 +15,7 @@
 }
 
 .timeline::before {
-  background:grey;
+  background: grey;
   content: '';
   height: 100%;
   left: 50%;
@@ -32,7 +32,7 @@
 }
 
 .timeline a {
-  color:grey;
+  color: grey;
   font-weight: bold;
   transition: all 0.25s ease-in;
 }
@@ -48,7 +48,7 @@
 }
 
 .timeline .timeline-item .timeline-icon {
-  background:grey;
+  background: grey;
   border-radius: 50%;
   height: 50px;
   left: 50%;
@@ -60,15 +60,26 @@
 }
 
 .timeline .timeline-item .timeline-icon img,
-.timeline .timeline-item .timeline-icon svg {
-  left: 14px;
+.timeline .timeline-item .timeline-icon .glyphicon {
+  left: 25%;
   position: relative;
   top: 11px;
 }
 
-.timeline .timeline-item .timeline-icon svg {
-  top: 14px;
+.timeline .timeline-item .timeline-icon .glyphicon {
+  top: 25%;
+
 }
+
+.glyphicon {
+  font-size: 25px;
+}
+
+
+#juleStörtDas{
+    left: 21%;
+}
+
 
 .timeline .timeline-item .timeline-content {
   padding: 20px;
@@ -79,7 +90,7 @@
 }
 
 .timeline .timeline-item .timeline-content p {
-  color:grey;
+  color: grey;
 }
 
 .timeline .timeline-item .timeline-content p {
@@ -111,22 +122,26 @@
     padding: 0;
     width: 90%;
   }
+
   .timeline::before {
     left: 0;
   }
+
   .timeline .timeline-item .timeline-content {
     float: right;
     text-align: left;
     width: 90%;
   }
-  .timeline .timeline-item .timeline-content::before, .timeline .timeline-item .timeline-content.right::before {
+
+  .timeline .timeline-item .timeline-content::before,
+  .timeline .timeline-item .timeline-content.right::before {
     border-left: 0;
     border-right: 7px solidgrey;
     left: 10%;
     margin-left: -6px;
   }
+
   .timeline .timeline-item .timeline-icon {
     left: 0;
   }
 }
-
