--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body{
   height: 100%;
   width: 100%;
   font-family: 'Poppins', sans-serif;
-  color: #222;
+  background-color: #1a1a1d;
 }
 
 .navbar{
