--- a/home/firstSteps/css/timeline.css
+++ b/home/firstSteps/css/timeline.css
@@ -15,7 +15,7 @@
 }
 
 .timeline::before {
-  background: grey;
+  background: #86c232;
   content: '';
   height: 100%;
   left: 50%;
@@ -32,7 +32,7 @@
 }
 
 .timeline a {
-  color: grey;
+  color: #86c232;
   font-weight: bold;
   transition: all 0.25s ease-in;
 }
@@ -48,7 +48,7 @@
 }
 
 .timeline .timeline-item .timeline-icon {
-  background: grey;
+  background: #86c232;
   border-radius: 50%;
   height: 50px;
   left: 50%;
@@ -136,7 +136,7 @@
   .timeline .timeline-item .timeline-content::before,
   .timeline .timeline-item .timeline-content.right::before {
     border-left: 0;
-    border-right: 7px solidgrey;
+    border-right: 7px #86c232;
     left: 10%;
     margin-left: -6px;
   }
