--- a/home/firstSteps/css/firstSteps.css
+++ b/home/firstSteps/css/firstSteps.css
@@ -119,7 +119,15 @@ a:hover {
 }
 
 
-@media screen and (max-width: 590px) {
+.navbar-nav {
+
+    margin-right: 2rem; 
+    font-size: 16px;
+  }
+
+
+
+@media screen and (max-width: 600px) {
 
    .btn.btn-link.collapsed{
     font-size: 1.1rem;
