--- a/home/global/fragments/navbar.html
+++ b/home/global/fragments/navbar.html
@@ -2,11 +2,11 @@
 
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md bg-light fixed-top">
-	<div class="container-fluid">
+<nav class="navbar navbar-expand-md bg-light ">
+	<div class="container-fluid" >
 		<!-- <a href="../../../index.html"><img id="limepic" src="../../global/img/Logo_Website.png"></a> -->
 				
-		<button class="navbar-toggler navbar-light" id="toggleButton" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+		<button class="navbar-toggler navbar-light " id="toggleButton" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
