--- a/home/global/css/nav.css
+++ b/home/global/css/nav.css
@@ -1,81 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
-#limepic {
-  height: 25%;
-  width: 25%;
-}
-
 .navbar {
-  padding: 0;
+  padding: .8rem;
   background-color: #86c232 !important;
 }
 
-.collapse {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.nav-link {
-  color: white !important;
-
-}
-
-#limepic {
-  height: 13%;
-  width: 13%;
-  padding: 0px;
-  margin: 0;
-}
-
-.navbar-nav li {
-  padding-right: 20px;
-}
 
 .nav-link {
   font-size: 1.1em !important;
+  color: white !important;
+  text-align: right;
+  
 }
 
-body {
-  padding-top: 4rem;
-}
 
-.navbar {
-  position: fixed;
-}
+@media screen and (max-width: 992px) {
+
 
 .navbar-nav {
-  float: right;
 
+  font-size: 16px;
 }
-
-nav.navbar {
-  justify-content: flex-end;
-}
-
-.dropdown.show,
-.dropdown-menu.show {
-  text-align: right;
-}
-
-.navbar-toggler {
-  background-color: #61892f;
-  font-size: 2rem;
-  position: absolute;
-  right: 10px;
-  top: 5px;
-}
-
-
-
-
-@media (min-width: 992px) {
-
-  .navbar-expand-lg .navbar-collapse {
-    justify-content: flex-end;
-  }
-  .dropdown-menu.show {
-    left: -8rem;
-  }
 
 }
