--- a/home/global/fragments/navbar.html
+++ b/home/global/fragments/navbar.html
@@ -15,13 +15,13 @@
 					<a class="nav-link" href="../../../index.html">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="../../firstSteps/html/firstSteps.html">First Steps</a>
+					<a class="nav-link" href="./home/firstSteps/html/firstStepsPs.html">First Steps</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="../../trickTutorials/html/AllTricks.html">Trick Tutorials</a>
+					<a class="nav-link" href="./home/trickTutorials/html/trickTutorials.html">Trick Tutorials</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="../../penModding/html/penmods.html">Penmodding</a>
+					<a class="nav-link" href="./home/penModding/html/penmods.html">Penmodding</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Inspiration</a>
