--- a/home/firstSteps/css/firstSteps.css
+++ b/home/firstSteps/css/firstSteps.css
@@ -50,7 +50,7 @@ body {
 
 .trick {
     list-style-type: none;
-   
+
 }
 
 
@@ -93,10 +93,10 @@ a {
     text-decoration: none;
 }
 
+
 a:hover {
     color: #61892f;
-    text-decoration: none;
-
+    text-decoration: underline;
 }
 
 .firstHeader {
@@ -126,8 +126,18 @@ a:hover {
     font-size: 30px;
     line-height: 1.7;
     padding-left: 0.5rem;
- 
+
 }
+
+.FAQuestion {
+    text-align: left;
+    margin-right: 1rem;
+}
+
+.icon {
+    background-color: white;
+}
+
 
 
 @media screen and (max-width: 992px) {
@@ -159,10 +169,23 @@ a:hover {
     }
 
     .firstHeader {
-
         font-size: 18px;
-
     }
+    .firstCards{
+        margin: 0 auto;
+        width: 100%;
+        margin-bottom: 5rem;
+    }
+
+    .FAQuestion {
+        font-size: 20px;
+    }
+
+    .p-3 {
+        padding-bottom: 4rem !important;
+    }
+
+   
 
 
 
