--- a/home/global/css/style.css
+++ b/home/global/css/style.css
@@ -168,6 +168,16 @@ hr.light-100 {
   margin-bottom: 1rem;
 }
 
+.col-md-12{
+ text-align: center;
+ padding-top: 150px !important;
+}
+
+iframe{
+  max-width: 100%;
+  border: 2px solid white;
+  padding: 0;
+}
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
