--- a/home/global/fragments/footer.html
+++ b/home/global/fragments/footer.html
@@ -1,36 +1,13 @@
-
 <footer>
 	<div class="container fluid-padding">
 		<div class="row text-center">
-			<div class="col-md-4">
-				<hr class="light">
-				<h5>Creater of the site</h5>
-				<hr class="light">
-				<p>LimeZz</p>
-				
-			</div>
-
-
-			<div class="col-md-4">
-				<hr class="light">
-				<h5>Collaboration with</h5>
-				<hr class="light">
-				<p>Juzzle</p>
-				<p>Letho72</p>
-				<p>Cookie</p>
-			</div>
-
-			<div class="col-md-4">
-				<hr class="light">
-				<h5>Service Area</h5>
-				<hr class="light">
-				<p>City, State, Postalcode</p>
-				<p>City, State, Postalcode</p>
-				<p>City, State, Postalcode</p>
+			<div id="social-wrapper">
+				<a href="https://www.instagram.com/limezzje" class="fa fa-instagram"></a>
+				<a href="https://www.youtube.com/channel/UC3Es6QONO5dg1chl41o6SIg" class="fa fa-youtube"></a>
 			</div>
 			<div class="col-12">
 				<hr class="light">
-				<h5>&copy;LimeZzje</h5>
+				<h5>&copy;LimeZzje 2020</h5>
 			</div>
 		</div>
 	</div>
