--- a/home/penModding/css/penmodding.css
+++ b/home/penModding/css/penmodding.css
@@ -121,10 +121,12 @@ body {
 }
 
 #modtypebuttons {
-  display: flex;
+  width: 100%;
+  margin:0 auto !important; 
   align-items: center;
   justify-content: center;
   padding-bottom: 3rem;
+  padding-right: 0em !important;
  
 }
 
