--- a/home/global/css/style.css
+++ b/home/global/css/style.css
@@ -179,11 +179,20 @@ iframe{
   padding: 0;
 }
 
+#bdWrapper{
+  margin: 0 auto !important;
+}
+
+
 /*---Media Queries --*/
 @media (max-width: 992px) {
   .social a {
     font-size: 4em;
     padding: 2em;
+  }
+
+  #sizeLabel{
+    font-size: 15px;
   }
 }
 
@@ -223,6 +232,8 @@ iframe{
    }
 
 @media (max-width: 576px) {
+
+
 
   .carousel-caption {
     top: 40%;
