--- a/home/global/css/style.css
+++ b/home/global/css/style.css
@@ -183,6 +183,10 @@ iframe{
   margin: 0 auto !important;
 }
 
+.legend-div{
+  padding-left: 1rem;
+}
+
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
@@ -194,6 +198,12 @@ iframe{
   #sizeLabel{
     font-size: 15px;
   }
+
+  .card-title{
+    font-size: 20px;
+  }
+
+
 }
 
 @media (max-width: 768px) {
